<resources>
    <string name="app_name" translatable="false">WeatherNow</string>
    <string name="home">Home</string>
    <string name="monitoring">Monitoring</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="current_language">English</string>
    <string name="app_introduction">A simple app which provides you useful weather information</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset">Reset</string>
    <string name="user_settings">User settings</string>
    <string name="temperature_with_unit">Temperature (°C)</string>
    <string name="rainfall_with_unit">Rainfall (mm)</string>
    <string name="windspeed_with_unit">Wind speed (km/h)</string>
    <string name="humidity_with_unit">Humidity (%)</string>
    <string name="attribute">Attribute</string>
    <string name="sensor">Sensor</string>
    <string name="timeframe">Timeframe</string>
    <string name="time_range">Time range</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="view">View</string>
    <string name="view_chart">View chart</string>
    <string name="sign_out">Log out</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_default">System default</string>
    <string name="language">Language</string>
    <string name="realtime_weather">Realtime weather</string>
    <string name="realtime_weather_summary">Allow WeatherNow to update weather information in realtime</string>
    <string name="offline_access">Offline access</string>
    <string name="offline_access_summary">Allow the app to save temporary data to storage for offline access</string>
    <string name="download_location">Download location</string>
    <string name="download_location_summary">Choose a directory to download and save file</string>
    <string name="data">Data</string>
    <string name="appearance">Appearance</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_summary">Report technical issues or suggest new features</string>
    <string name="save_login_info">Save login info</string>
    <string name="remember_me">Remember me</string>
    <string name="chart_no_data">No chart data available</string>
    <string name="weather">Weather</string>
    <string name="air_quality">Air quality</string>
    <string name="aqi">AQI</string>
    <string name="aqi_predict">AQI Predict</string>
    <string name="co2">CO2</string>
    <string name="co2_average">CO2 Average</string>
    <string name="no_aq">NO</string>
    <string name="no2">NO2</string>
    <string name="o3">O3</string>
    <string name="pm10">PM10</string>
    <string name="pm25">PM2.5</string>
    <string name="so2">SO2</string>
    <string name="temperature_value">27°</string>
    <string name="celsius">Celsius</string>
    <string name="celsius_c">Celsius (°C)</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="fahrenheit_f">Fahrenheit (°F)</string>
    <string name="rainfall_value_mm" translatable="false">24</string>
    <string name="uv_index">UV Index</string>
    <string name="ux_index_value" translatable="false">18</string>
    <string name="humidity">Humidity</string>
    <string name="precipitation">Precipitation</string>
    <string name="wind">Wind</string>
    <string name="place_value" translatable="false">17</string>
    <string name="rainfall">Rainfall</string>
    <string name="sunrise_and_sunset">Sunrise &amp; Sunset</string>
    <string name="environment">Environment</string>
    <string name="today">Today</string>
    <string name="pollutant_concentration_with_unit">Pollutant concentration (μg/m\u00B3)</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="moderate">Moderate</string>
    <string name="rain_value" translatable="false">25</string>
    <string name="humidity_value" translatable="false">10</string>
    <string name="wind_value" translatable="false">20</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_value" translatable="false">12</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_value" translatable="false">115</string>
    <string name="aqi_value">Air Quality Index: 16/5</string>
    <string name="air_moderate_desc">Air quality is unhealthy for sensitive groups of people. Potential health effects occur.</string>
    <string name="pm25_value" translatable="false">19</string>
    <string name="pm10_value" translatable="false">12</string>
    <string name="co2_value" translatable="false">29</string>
    <string name="o3_value" translatable="false">18</string>
    <string name="n_o_value" translatable="false">2</string>
    <string name="no2_value" translatable="false">33</string>
    <string name="so2_value" translatable="false">65</string>
    <string name="select_date_range">Select date range</string>
    <string name="select_time">Select time</string>
    <string-array name="language_alias" translatable="false">
        <item>en</item>
        <item>vi</item>
        <item>zh</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Chinese (Simplified)</item>
    </string-array>
    <string-array name="theme_alias" translatable="false">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="themes">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>