<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/home"/>

    <item
        android:id="@+id/monitoringFragment"
        android:enabled="true"
        android:icon="@drawable/ic_monitoring_24dp"
        android:title="@string/monitoring"/>

    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/maps_icon_selector"
        android:title="@string/map"/>

    <item
        android:id="@+id/userInfoFragment"
        android:enabled="true"
        android:icon="@drawable/user_icon_selector"
        android:title="@string/settings"/>
</menu>