<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:id="@+id/languageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_language"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:layout_margin="@dimen/margin_large"
        app:icon="@drawable/ic_language_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logoAnimationView"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_marginTop="@dimen/margin_huge"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1.2"
        app:lottie_rawRes="@raw/rainbow_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalTop"/>

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/logoAnimationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/appIntroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_huge"
        android:layout_marginEnd="@dimen/margin_huge"
        android:text="@string/app_introduction"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/appNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_huge"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/orText"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_huge"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/orText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"/>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/margin_divider"
        android:layout_marginEnd="@dimen/margin_base"
        android:background="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/orText"
        app:layout_constraintBottom_toTopOf="@id/googleButton"/>

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_huge"
        android:layout_marginEnd="@dimen/margin_huge"
        android:text="@string/or"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/googleButton"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"/>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/margin_base"
        android:layout_marginEnd="@dimen/margin_divider"
        android:background="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@id/orText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/googleButton"/>

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:id="@+id/googleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_huge"
        android:layout_marginEnd="@dimen/margin_huge"
        android:text="@string/continue_with_google"
        app:icon="@drawable/ic_google_g_logo"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>